[gd_scene load_steps=10 format=2]

[ext_resource path="res://icons/gray_music_on_button.png" type="Texture" id=1]
[ext_resource path="res://icons/gray_go_back_button.png" type="Texture" id=2]
[ext_resource path="res://icons/gray_play_button.png" type="Texture" id=3]
[ext_resource path="res://icons/gray_speaker_on_button.png" type="Texture" id=4]
[ext_resource path="res://icons/gray_speaker_off_button.png" type="Texture" id=5]
[ext_resource path="res://icons/gray_music_off_button.png" type="Texture" id=6]
[ext_resource path="res://scripts/Pause.gd" type="Script" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Sora/static/Sora-SemiBold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 85
font_data = SubResource( 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.239216, 0.247059, 0.239216, 1 )

[node name="Components" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pause" type="Label" parent="Components"]
margin_right = 700.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Pause"
align = 1
valign = 1

[node name="Control" type="Control" parent="Components"]
margin_top = 240.0
margin_right = 700.0
margin_bottom = 477.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayButton" type="TextureButton" parent="Components/Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1331.0
margin_bottom = 503.0
rect_scale = Vector2( 0.35, 0.35 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="Control2" type="Control" parent="Components"]
margin_top = 481.0
margin_right = 700.0
margin_bottom = 718.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MusicButton" type="TextureButton" parent="Components/Control2"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1291.0
margin_bottom = 463.0
rect_scale = Vector2( 0.35, 0.35 )
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="Control3" type="Control" parent="Components"]
margin_top = 722.0
margin_right = 700.0
margin_bottom = 959.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpeakerButton" type="TextureButton" parent="Components/Control3"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1291.0
margin_bottom = 474.0
rect_scale = Vector2( 0.35, 0.35 )
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 3

[node name="Control4" type="Control" parent="Components"]
margin_top = 963.0
margin_right = 700.0
margin_bottom = 1200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GoBackButton" type="TextureButton" parent="Components/Control4"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1291.0
margin_bottom = 434.0
rect_scale = Vector2( 0.35, 0.35 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 3

[connection signal="pressed" from="Components/Control/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Components/Control2/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="Components/Control3/SpeakerButton" to="." method="_on_SpeakerButton_pressed"]
[connection signal="pressed" from="Components/Control4/GoBackButton" to="." method="_on_GoBackButton_pressed"]
